--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,25 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
 default: &default
   adapter: postgresql
   endcoding: unicode
+  username: postgres
+  password: 5550129piyuelo
+  host: localhost
+  port: 5432
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  ##timeout: 5000
 
 development:
   <<: *default
-  database: Recipes_db
+  database: recipes_db
+  username: postgres
 
 test:
   <<: *default
-  database:  Recipes_test_db
+  database:  recipes_test_db
+  username: postgres
 
 production:
   <<: *default
-  database:  Recipes_db
+  database:  recipes_production_db
+  username: postgres
+  password: <%= ENV["BLOG_APP_DATABASE_PASSWORD"] %>
