--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -1,66 +1,20 @@
-<<<<<<< HEAD
-name: Tests
-
-on: pull_request
-
-jobs:
-  rspec:
-    name: RSpec
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 3.1.x
-      - name: Setup RSpec
-        run: |
-          [ -f Gemfile ] && bundle
-          gem install --no-document rspec -v '>=3.0, < 4.0'
-      - name: RSpec Report
-        run: rspec --force-color --format documentation
-=======
 name: Linters
 
 on: pull_request
-
-env:
-  FORCE_COLOR: 1
 
 jobs:
   rubocop:
     name: Rubocop
     runs-on: ubuntu-22.04
+    
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-ruby@v1
         with:
-          ruby-version: 3.1.x
+          ruby-version: ">=3.1.x"
       - name: Setup Rubocop
         run: |
           gem install --no-document rubocop -v '>= 1.0, < 2.0' # https://docs.rubocop.org/en/stable/installation/
-          [ -f .rubocop.yml ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/ror/.rubocop.yml
+          [ -f .rubocop.yml ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/ruby/.rubocop.yml
       - name: Rubocop Report
         run: rubocop --color
-  stylelint:
-    name: Stylelint
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "18.x"
-      - name: Setup Stylelint
-        run: |
-          npm install --save-dev stylelint@13.x stylelint-scss@3.x stylelint-config-standard@21.x stylelint-csstree-validator@1.x
-          [ -f .stylelintrc.json ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/ror/.stylelintrc.json
-      - name: Stylelint Report
-        run: npx stylelint "**/*.{css,scss}"
-  nodechecker:
-    name: node_modules checker
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - name: Check node_modules existence
-        run: |
-          if [ -d "node_modules/" ]; then echo -e "\e[1;31mThe node_modules/ folder was pushed to the repo. Please remove it from the GitHub repository and try again."; echo -e "\e[1;32mYou can set up a .gitignore file with this folder included on it to prevent this from happening in the future." && exit 1; fi
->>>>>>> e4a88aa16c731167ec85fa39bcb94cf455eacf4d
