--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -55,4 +55,7 @@ Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
   Enabled: false
+Lint/ScriptPermission:
+  Enabled: false
+
 
